--- a/front/src/style/themes/_dark.scss
+++ b/front/src/style/themes/_dark.scss
@@ -9,6 +9,7 @@ $border-color: rgb(63, 88, 102);
 $light-shadow-color: rgba(223, 235, 240, 0.15);
 $shadow-color: rgba(63, 102, 97, 0.95);
 $box-shadow: 0px 1px 3px 0px rgba(63, 88, 102, 0.95), 0px 0px 0px 1px rgba(63, 88, 102, 0.98);
+$box-shadow-artist: 0px 1px 3px 0px rgba(43, 58, 66, 0.95), 0px 0px 0px 1px rgba(43, 58, 66, 0.98);
 $link-color: rgb(255, 144, 0);
 
 .theme-dark {
@@ -142,6 +143,9 @@ $link-color: rgb(255, 144, 0);
       .extra, .meta {
         color: $discrete-text-color;
       }
+    }
+    .ui.cards > .card, .ui.card, .artist {
+      box-shadow: $box-shadow-artist;
     }
     .playlist.card {
       .attached.button {
