--- a/front/src/style/themes/_dark.scss
+++ b/front/src/style/themes/_dark.scss
@@ -123,6 +123,9 @@ $link-color: rgb(255, 144, 0);
     .ui.segment:not(.basic) {
       background-color: $light-background-color;
     }
+    .link {
+      color: $link-color;
+    }
     .ui.list,
     .ui.dropdown {
       .item,
@@ -135,6 +138,9 @@ $link-color: rgb(255, 144, 0);
       .selected.item:not(:hover) {
         color: $background-color;
       }
+    }
+    .segment .ui.list .item {
+      background-color: transparent;
     }
     .ui.divided.items > .item:not(:first-child) {
       border-top: 1px solid $border-color;
@@ -251,9 +257,12 @@ $link-color: rgb(255, 144, 0);
       }
     }
   }
+  .ui.list > .item .description {
+    color: $text-color;
+  }
   .ui.link.list.list a.item:hover,
-  .ui.link.list.list .item a:not(.ui):not(.button):hover {
-    color: $link-color;
+  .ui.link.list.list .item a:not(.ui):not(.button):hover, .ui.list > .item a.header {
+    color: $link-color !important;
   }
   [data-tooltip]::after {
     background-color: $light-background-color;
