--- a/front/src/style/themes/_light.scss
+++ b/front/src/style/themes/_light.scss
@@ -31,5 +31,8 @@
   footer#footer div.item:hover {
     color: rgba(0, 0, 0, 0.87);
   }
-
+  .ui.fixed-header.segment {
+    background-color: white;
+    box-shadow: inset 0px -2px 0px 0px rgba(34, 36, 38, 0.15);
+  }
 }
