--- a/front/src/style/_main.scss
+++ b/front/src/style/_main.scss
@@ -96,7 +96,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  @include media("<tablet") {
+  @include media("<desktop") {
     padding-bottom: $mobile-player-height + 0.5em;
   }
 }
