--- a/front/src/style/themes/_dark.scss
+++ b/front/src/style/themes/_dark.scss
@@ -284,7 +284,11 @@ $link-color: rgb(255, 144, 0);
 
   .ui.fixed-header.segment {
     background-color: $background-color;
-    box-shadow: inset 0px -2px 0px 0px rgba(34, 36, 38, 0.15);
+    box-shadow: inset 0px -1px 0px 0px rgba(34, 36, 38, 0.15);
+  }
+  .ui.fixed-footer.segment {
+    background-color: $background-color;
+    box-shadow: inset 0px 1px 0px 0px rgba(34, 36, 38, 0.15);
   }
 }
 
