--- a/front/src/style/themes/_light.scss
+++ b/front/src/style/themes/_light.scss
@@ -33,6 +33,13 @@
   }
   .ui.fixed-header.segment {
     background-color: white;
-    box-shadow: inset 0px -2px 0px 0px rgba(34, 36, 38, 0.15);
+    box-shadow: inset 0px -1px 0px 0px rgba(34, 36, 38, 0.15);
+  }
+  .ui.fixed-footer.segment {
+    background-color: white;
+    box-shadow: inset 0px 1px 0px 0px rgba(34, 36, 38, 0.15);
+  }
+  .queue.segment .queue-controls {
+    background-color: white;
   }
 }
