Added small transition when displaying player/queue

--- a/front/src/style/themes/_light.scss
+++ b/front/src/style/themes/_light.scss
@@ -11,6 +11,9 @@
       }
     }
   }
+  .main.with-background {
+    background-color: white;
+  }
 
   .discrete {
     color: rgba(0, 0, 0, 0.87);
