--- a/front/src/style/themes/_dark.scss
+++ b/front/src/style/themes/_dark.scss
@@ -31,6 +31,9 @@ $link-color: rgb(255, 144, 0);
       color: $text-color;
     }
   }
+  .main.with-background {
+    background-color: $background-color;
+  }
   .ui.link.list.list .active.item,
   .ui.link.list.list .active.item a:not(.ui) {
     color: inherit;
