--- a/front/src/style/_main.scss
+++ b/front/src/style/_main.scss
@@ -89,6 +89,15 @@ body {
     font-size: 90%;
   }
 }
+
+html {
+  scroll-behavior: smooth;
+}
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
 #app {
   font-family: "Avenir", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
