--- a/front/src/style/_main.scss
+++ b/front/src/style/_main.scss
@@ -81,7 +81,7 @@
 
 $desktop-sidebar-width: 275px;
 $widedesktop-sidebar-width: 275px;
-$bottom-player-height: 5rem;
+$bottom-player-height: 4rem;
 
 html,
 body {
@@ -105,9 +105,7 @@ html {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  @include media("<desktop") {
-    padding-bottom: $bottom-player-height + 0.5rem;
-  }
+  padding-bottom: $bottom-player-height;
 }
 
 #app > main, #app > .main {
