--- a/front/src/style/_main.scss
+++ b/front/src/style/_main.scss
@@ -107,6 +107,10 @@ html {
   flex-direction: column;
   &.has-bottom-player {
     padding-bottom: $bottom-player-height;
+    .service-messages {
+      bottom: $bottom-player-height + 1rem;
+    }
+
   }
 }
 
@@ -172,7 +176,6 @@ html {
   position: fixed;
   bottom: 1em;
   right: 1em;
-  bottom: $bottom-player-height + 1rem;
   > .ui.message {
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.7);
   }
