Added underline when hovering links

--- a/front/src/style/_main.scss
+++ b/front/src/style/_main.scss
@@ -429,5 +429,14 @@ input + .help {
     display: none !important;
   }
 }
+:not(.menu) > {
+  a, .link {
+    &:not(.button):not(.list) {
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
 @import "./themes/_light.scss";
 @import "./themes/_dark.scss";
