--- a/front/src/style/global_theming/_darkgreen.scss
+++ b/front/src/style/global_theming/_darkgreen.scss
@@ -14,7 +14,7 @@ $box-shadow: 0px 1px 3px 0px rgba(63, 88, 102, 0.95),
   0px 0px 0px 1px rgba(63, 88, 102, 0.98);
 $link-color: rgb(255, 144, 0);
 
-.theme-dark {
+.theme-darkgreen {
   background-color: $background-color;
   .ui.labeled.input {
     input,
