missing scss vars bugfix

--- a/front/src/components/component_theming/darkgreen/scoped/Sidebar.vue.scss
+++ b/front/src/components/component_theming/darkgreen/scoped/Sidebar.vue.scss
@@ -6,7 +6,7 @@
     }
   }
   .ui.segment.header-wrapper {
-    background: $header-background;
-    box-shadow: $header-shadow;
+    background: $darkgreen-header-background;
+    box-shadow: $darkgreen-header-shadow;
   }
 }
