--- a/front/src/style/global_theming/_darkgreen_vars.scss
+++ b/front/src/style/global_theming/_darkgreen_vars.scss
@@ -18,3 +18,4 @@ $link-color: rgb(255, 144, 0);
 $darkgreen-header-background: lighten(rgb(51, 71, 82), 10%);
 $darkgreen-sidebar-background: linear-gradient(0deg, darken(rgb(43, 58, 66), 5%), lighten(rgb(43, 58, 66), 10%));
 $darkgreen-researchprompt-background: rgba(255,255,255,0.5);
+$darkgreen-header-shadow: 0px 1px 3px 0px rgba(9, 12, 14, 0.4);
