--- a/front/src/style/global_theming/_darkgreen_vars.scss
+++ b/front/src/style/global_theming/_darkgreen_vars.scss
@@ -18,4 +18,5 @@ $link-color: rgb(255, 144, 0);
 $darkgreen-header-background: lighten(rgb(51, 71, 82), 10%);
 $darkgreen-sidebar-background: linear-gradient(0deg, darken(rgb(43, 58, 66), 5%), lighten(rgb(43, 58, 66), 10%));
 $darkgreen-researchprompt-background: rgba(255,255,255,0.5);
-$darkgreen-header-shadow: 0px 1px 3px 0px rgba(9, 12, 14, 0.4);
+$darkgreen-header-shadow: 0 0.3rem 0.3rem -0.3rem rgba(9, 12, 14, 0.4);
+$darkgreen-sidebar-shadow: 0.1rem 0.2rem 0.2rem 0 rgba(9, 12, 14, 0.2);
