--- a/front/src/style/globals/_channels.scss
+++ b/front/src/style/globals/_channels.scss
@@ -62,6 +62,9 @@
   .content {
     flex-grow: 1;
   }
+  .row {
+    border-bottom: 1px solid var(--border-color);
+  }
 }
 .ui.artist-label {
   .icon {
@@ -79,7 +82,9 @@
 }
 
 .album-entry,
-.artist-entry {
+.artist-entry,
+.artist-entries.row,
+.album-entries.row {
   .ui.really.tiny.button.play-button {
     visibility: hidden;
   }
@@ -105,6 +110,25 @@
     color: var(--vibrant-color);
     visibility: visible;
   }
+  .actions.one.wide.left.floated.column {
+    width: 3% !important;
+  }
+  .content,
+  .meta,
+  .image {
+    user-select: none;
+  }
+  .helper {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+  }
+  .ui.artist-track.mini.image {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    margin: auto;
+  }
 }
 
 .album-entry:hover,
@@ -124,30 +148,29 @@
   }
 }
 
-.album-entry, .artist-entry, .channel-entry-card {
+.album-entry, .album-entries .artist-entry, .artist-entries .channel-entry-card {
   border-radius: 5px;
   padding: 0.5em;
-  .meta {
-    text-align: right;
-    min-width: 7em;
-  }
   > div {
     padding: 0.25em;
     &:not(:last-child) {
       margin-right: 0.25em;
     }
   }
-  &.active {
-    background: rgba(155, 155, 155, 0.2);
-  }
-  &:hover {
-    background: rgba(155, 155, 155, 0.1);
-  }
   .favorite-icon.tiny.button {
     border: none !important;
     padding: 0 !important;
     margin: 0 0.5em;
     transition: all ease-in-out;
+  }
+}
+
+.album-entry,  .artist-entry, .channel-entry-card {
+  &.active {
+    background: rgba(155, 155, 155, 0.2);
+  }
+  &:hover {
+    background: rgba(155, 155, 155, 0.1);
   }
 }
 .channel-image {
