Add support for all list locations Remove reliability on play button

--- a/front/src/style/components/_button.scss
+++ b/front/src/style/components/_button.scss
@@ -139,7 +139,7 @@ button.reset {
 
 .trackPosition {
   cursor: pointer;
-  display: inline-block;
+  display: contents;
   min-height: 1em;
   outline: none;
   border: none;
