--- a/front/src/style/_main.scss
+++ b/front/src/style/_main.scss
@@ -48,6 +48,7 @@ $bottom-player-height: 4rem;
 @import "./components/_user_link.scss";
 @import "./components/_volume_control.scss";
 @import "./components/_loaders.scss";
+@import "./components/play_indicator.scss";
 
 @import "./pages/_about.scss";
 @import "./pages/_admin_account_detail.scss";
