--- a/front/src/style/globals/_utils.scss
+++ b/front/src/style/globals/_utils.scss
@@ -59,7 +59,7 @@ a {
   }
 }
 .tablet-and-below {
-  @include media(">=desktop") {
+  @include media(">=tablet") {
     display: none !important;
   }
 }
