--- a/front/src/style/components/_favorite.scss
+++ b/front/src/style/components/_favorite.scss
@@ -1,4 +1,4 @@
-.ui.favorite-icon.favorited {
+.favorite-icon.favorited {
   animation: .5s linear burst;
   outline-color: transparent;
   @keyframes burst{
