--- a/front/src/style/globals/_utils.scss
+++ b/front/src/style/globals/_utils.scss
@@ -104,3 +104,10 @@ span.diff.removed {
 .really.discrete {
   color: var(--really-discrete-text-color);
 }
+
+.ui.inverted.dimmer {
+  background-color: var(--dimmer-background);
+  > .ui.dimmer {
+    color: var(--dimmer-color);
+  }
+}
