--- a/front/src/style/components/_track_table.scss
+++ b/front/src/style/components/_track_table.scss
@@ -210,3 +210,34 @@
     background: transparent;
   }
 }
+
+.track-table.podcast.row,
+.track-row.podcast.row {
+  height: 20vh;
+  align-items: center;
+  display: flex;
+  .ui.artist-track.mini.image {
+    height: 15vh;
+    width: auto;
+    top: auto;
+    bottom: auto;
+  }
+  .image.left.floated.column {
+    width: (15vh);
+    display: flex !important;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .content.left.floated.column {
+    margin-left: 26px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+
+    .podcast-episode-title {
+      font-weight: bold;
+      font-size: medium;
+    }
+  }
+}
