Limit shown description lines in cards listing to 13

--- a/front/src/style/components/_card.scss
+++ b/front/src/style/components/_card.scss
@@ -17,6 +17,11 @@
   .content .description,
   .description {
     color: var(--card-text-color);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-line-clamp: 8;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
   }
   .extra,
   .meta {
