Corrected typos in vars.css for card text colour.
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2340>

--- a/front/src/style/_vars.scss
+++ b/front/src/style/_vars.scss
@@ -112,7 +112,7 @@ $tooltip-background: var(--site-background) !default;
 $tooltip-color: var(--text-color) !default;
 
 $card-background: var(--site-background) !default;
-$card-text-colar: var(-text-color) !default;
+$card-text-color: var(--text-color) !default;
 $card-box-shadow: 0 1px 3px 0 #D4D4D5, 0 0 0 1px #D4D4D5 !default;
 
 $dimmer-background: rgba(255, 255, 255, 0.85) !default;
