--- a/front/src/style/components/_queue.scss
+++ b/front/src/style/components/_queue.scss
@@ -459,5 +459,5 @@
 
 .drag-container:not(.dragging) .hover .queue-item {
   background: rgba(0,0,0,.05);
-  color: #000000f2;
+  color: var(--text-color);
 }
