fix: make progress bars work again
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2346>

--- a/front/src/style/components/_player.scss
+++ b/front/src/style/components/_player.scss
@@ -48,7 +48,7 @@
   .ui.progress .bar {
     transition: none;
     width: 100%;
-    transform: translateX(-100%);
+    transform: translateX(calc(var(--fw-track-progress) - 100%));
     transform-origin: top left;
     will-change: transform;
     position: absolute;
