--- a/front/src/style/components/_queue.scss
+++ b/front/src/style/components/_queue.scss
@@ -160,7 +160,7 @@
   .ui.progress .bar {
     transition: none;
     width: 100%;
-    transform: translateX(-100%);
+    transform: translateX(calc(var(--fw-track-progress) - 100%));
     transform-origin: top left;
     will-change: transform;
   }
@@ -171,18 +171,6 @@
   .ui.progress:not(.indeterminate)
     .bar.position:not(.buffer) {
     background: var(--vibrant-color);
-    will-change: transform;
-    
-    
-    &.animated {
-      @keyframes progress {
-        0% { transform: translate3d(-100%, 0, 0) }
-        100% { transform: translate3d(0, 0, 0) }
-      }
-      
-      animation-name: progress;
-      animation-timing-function: linear;
-    }
   }
 
   .indicating.progress .bar {
