--- a/front/src/style/components/_queue.scss
+++ b/front/src/style/components/_queue.scss
@@ -283,6 +283,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      max-width: 100vw;
 
       .ui.header {
         width: 100%;
