fix(2054): add queue item title max width for mobile
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2372>

--- a/front/src/style/components/_queue.scss
+++ b/front/src/style/components/_queue.scss
@@ -463,6 +463,12 @@
       align-items: center;
     }
 
+    .title.ellipsis {
+      @include media("<tablet") {
+          max-width: 35vw;
+      }
+    }
+
     // NOTE: Taken from semantic ui
     &.active {
       background: #E0E0E0;
