fix(2054): Increase mobile table row padding
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2372>

--- a/front/src/style/components/_track_table.scss
+++ b/front/src/style/components/_track_table.scss
@@ -150,7 +150,7 @@
 
 .track-row,
 .track-table {
-  padding: 0.5em;
+  padding: 0.5em !important; /* Overwrite fomantic ui padding rules */
   > div:not(.mobile) {
     padding: 0.25em;
     margin-right: 0.25em;
